[gd_scene load_steps=7 format=3 uid="uid://bo0fu6q05wig2"]

[ext_resource type="Script" path="res://Source/GUI/InGameGUI.gd" id="1_apyj1"]
[ext_resource type="Texture2D" uid="uid://ds4q526lf3ctj" path="res://Content/Art/Textures/config.png" id="1_e1jo6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6b3w6"]
bg_color = Color(0, 0, 0, 0.168627)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48
corner_detail = 20

[sub_resource type="Animation" id="Animation_stixr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/Control/config_btn:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/Control/config_btn:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tx7m6"]
resource_name = "hover_config"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/Control/config_btn:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/Control/config_btn:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m4dop"]
_data = {
"RESET": SubResource("Animation_stixr"),
"hover_config": SubResource("Animation_tx7m6")
}

[node name="InGameGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_apyj1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="stats" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 10

[node name="config_btn" type="Button" parent="MarginContainer/HBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(27, 27)
size_flags_horizontal = 10
size_flags_vertical = 4
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_6b3w6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6b3w6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6b3w6")
theme_override_styles/focus = SubResource("StyleBoxFlat_6b3w6")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Control/config_btn"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
pivot_offset = Vector2(24, 24)
texture = ExtResource("1_e1jo6")
expand_mode = 1
stretch_mode = 4

[node name="ConfigAnimator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_m4dop")
}

[connection signal="button_down" from="MarginContainer/HBoxContainer/Control/config_btn" to="." method="_on_config_btn_button_down"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/Control/config_btn" to="." method="_on_config_btn_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/Control/config_btn" to="." method="_on_config_btn_mouse_exited"]
